tests/profile/error/camera/gotogeo_missing_latitude.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "longitude": 2.0,
    "altitude": 4.0
  }
}
